# FEUP-PROG-ROBOTS

./: .gitignore  CMakeLists.txt  Entity.cpp  Entity.h  FEUP-PROG-ROBOTS.sln  FEUP_PROG_Proj1  Game.cpp  Game.h  MAZE_02.TXT  MAZE_02_WINNERS.txt  MAZE_03.TXT  MAZE_03_WINNERS.txt  MAZE_04_WINNERS.txt  MAZE_05.TXT  MAZE_06_WINNERS.txt  MAZE_200.TXT  MAZE_200_WINNERS.txt  MAZE_MAZE_02.TXT_WINNERS.txt  Maze.cpp  Maze.h  Menu.cpp  Menu.h  Player.cpp  Player.h  Post.cpp  Post.h  README.md  Robot.cpp  Robot.h  Utils.cpp  Utils.h  constants.h  inp_out.cpp  inp_out.h  main.cpp  menu.cpp  menu.h  rules.txt
Debug/: CodeAnalysisResultManifest.txt  Entity.nativecodeanalysis.sarif  FEUP-PROG-ROBOTS.exe.recipe  FEUP-PROG-ROBOTS.ilk  FEUP-PROG-ROBOTS.vcxproj.FileListAbsolute.txt  Game.nativecodeanalysis.sarif  Maze.nativecodeanalysis.sarif  Menu.nativecodeanalysis.sarif  Player.nativecodeanalysis.sarif  Post.nativecodeanalysis.sarif  Robot.nativecodeanalysis.sarif  Utils.nativecodeanalysis.sarif  main.nativecodeanalysis.sarif
html/: annotated.html  annotated_dup.js  classes.html  dir_09e761304027c904456130627fd4dcf5.html  dir_09e761304027c904456130627fd4dcf5.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  entities_8h.html  entities_8h.js  entities_8h_source.html  files.html  functions.html  functions_vars.html  game_8h_source.html  global_8h_source.html  globals.html  globals_func.html  index.html  menu_8h_source.html  navtreedata.js  navtreeindex0.js  score_8h_source.html  structMaze-members.html  structMaze.html  structMaze.js  structPlayer-members.html  structPlayer.html  structPlayer.js  structPoint-members.html  structPoint.html  structRobot-members.html  structRobot.html  structRobot.js
includes/: Entity.h  Game.h  Maze.h  Menu.h  Player.h  Post.h  Robot.h  constants.h  entities.h  game.h  global.h  globaldefs.h  inp_out.h  maze.h  menu.h  player.h  robot.h  score.h
info/: README.md
input/: MAZE_01.TXT  MAZE_01.txt  MAZE_02.TXT  (+9 more)
outdated/: CMakeLists.txt  Doxyfile  README.md
outdated/includes/: score.h
outdated/includesO/: menu.h
outdated/infoO/: README.md
outdated/input/: MAZE_01.TXT  MAZE_01_WINNERS.txt  MAZE_02_WINNERS.txt  MAZE_03.TXT  MAZE_04.TXT  MAZE_05.TXT
outdated/src/: menu.cpp  score.cpp
(+61 files in other folders)
